# EngineeringThesis

./: .gitignore  inzynierka.odt  schemat_komunikacji.odg
project/: CMakeLists.txt  channel.h  main.cpp  mainwindow.h  typedefs.h
project/kernels/: kernels.cl
projekt/: CMakeLists.txt  channel.h  main.cpp  mainwindow.h  simulation.cpp  simulation.h  typedefs.h
projekt/kernels/: inc.h  kernels.cl
thesis/: inzynierka.odt  schemat_komunikacji.odg
